[gd_scene load_steps=18 format=4 uid="uid://dj2okl7imb6kj"]

[ext_resource type="Texture2D" uid="uid://cxrkasni83uxe" path="res://assets/sprites/world/gorund2.png" id="1_1h646"]
[ext_resource type="Script" uid="uid://ckvnkns86v2kw" path="res://scenes/map/area_tutorial/sections/limit_camera_section.gd" id="1_n635d"]
[ext_resource type="Texture2D" uid="uid://c8jp20mhxprs5" path="res://assets/sprites/world/MountainsLayers/sky.png" id="2_mhf66"]
[ext_resource type="Script" uid="uid://dcpnphlb0gwid" path="res://scenes/map/area_tutorial/sections/transition_zone.gd" id="2_n635d"]
[ext_resource type="Texture2D" uid="uid://by10iarixqk42" path="res://assets/sprites/world/Boss Background/05.png" id="3_m2qk4"]
[ext_resource type="PackedScene" uid="uid://dqqjfgn3jftrp" path="res://scenes/Enemies/enemy_three.tscn" id="4_r503u"]
[ext_resource type="Texture2D" uid="uid://cya8te81n0gx4" path="res://assets/sprites/world/Boss Background/04.png" id="4_rg5pe"]
[ext_resource type="Texture2D" uid="uid://dhk7b7n7n8kmb" path="res://assets/sprites/world/Boss Background/03.png" id="5_vg3cr"]
[ext_resource type="Texture2D" uid="uid://bysu3288x1s7h" path="res://assets/sprites/world/Boss Background/02.png" id="6_hckp6"]
[ext_resource type="Texture2D" uid="uid://dvjhv6jku4l2b" path="res://assets/sprites/world/Boss Background/01.png" id="7_vvdfm"]
[ext_resource type="PackedScene" uid="uid://ymvyw5wkv3fx" path="res://scenes/items/heart_item.tscn" id="11_m2qk4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r503u"]
texture = ExtResource("1_1h646")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -15.310291, 24, -15.431883, 24, 24, -24, 24)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -15.310291, 24, -15.431883, 24, 24, -24, 24)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -15.310291, 24, -15.431883, 24, 24, -24, 24)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -15.310291, 24, -15.431883, 24, 24, -24, 24)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -5.957283, 24, -5.9845924, 24, 24, -24, 24)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -5.957283, 24, -5.9845924, 24, 24, -24, 24)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -5.957283, 24, -5.9845924, 24, 24, -24, 24)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -5.957283, 24, -5.9845924, 24, 24, -24, 24)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -5.957283, 24, -5.9845924, 24, 24, -24, 24)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24, -5.957283, 24, -5.9845924, 24, 24, -24, 24)

[sub_resource type="TileSet" id="TileSet_hnipg"]
tile_size = Vector2i(48, 48)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_r503u")

[sub_resource type="CircleShape2D" id="CircleShape2D_7o30c"]
radius = 133.63383

[sub_resource type="RectangleShape2D" id="RectangleShape2D_blrji"]
size = Vector2(29, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mhf66"]
size = Vector2(106, 516)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m2qk4"]
size = Vector2(20, 375.5)

[node name="Section5" type="Node2D"]
script = ExtResource("1_n635d")
camera_bounds = Rect2(100, -100, 2350, 384)

[node name="Clouds" type="Node2D" parent="."]
position = Vector2(0, 23)

[node name="Sky" type="Parallax2D" parent="Clouds"]
scroll_scale = Vector2(0, 0)
scroll_offset = Vector2(0, -206)

[node name="Sprite2D" type="Sprite2D" parent="Clouds/Sky"]
position = Vector2(244.16666, 430.99997)
scale = Vector2(2.3416667, 2.3416667)
texture = ExtResource("2_mhf66")

[node name="Clouds2" type="Parallax2D" parent="Clouds"]
scroll_scale = Vector2(0.1, 1)
repeat_size = Vector2(480, 0)
repeat_times = 59

[node name="Sprite2D" type="Sprite2D" parent="Clouds/Clouds2"]
position = Vector2(2365, 82)
texture = ExtResource("3_m2qk4")

[node name="RockMontains" type="Node2D" parent="."]
position = Vector2(0, 23)

[node name="Montain2" type="Parallax2D" parent="RockMontains"]
scroll_scale = Vector2(0.4, 1)
repeat_size = Vector2(480, 0)
repeat_times = 50

[node name="Sprite2D" type="Sprite2D" parent="RockMontains/Montain2"]
position = Vector2(2383, -57)
texture = ExtResource("4_rg5pe")
centered = false

[node name="Montain1" type="Parallax2D" parent="RockMontains"]
scroll_scale = Vector2(0.6, 1)
scroll_offset = Vector2(0, -47)
repeat_size = Vector2(480, 0)
repeat_times = 25

[node name="Sprite2D" type="Sprite2D" parent="RockMontains/Montain1"]
position = Vector2(2089, -136)
texture = ExtResource("5_vg3cr")
centered = false

[node name="Trees" type="Node2D" parent="."]
position = Vector2(0, 23)

[node name="TreeTronco" type="Parallax2D" parent="Trees"]
scroll_scale = Vector2(0.8, 1)
repeat_size = Vector2(480, 0)
repeat_times = 19

[node name="Sprite2D" type="Sprite2D" parent="Trees/TreeTronco"]
position = Vector2(1872, 82)
texture = ExtResource("6_hckp6")

[node name="Trees1" type="Parallax2D" parent="Trees"]
scroll_scale = Vector2(0.8, 1)
scroll_offset = Vector2(0, -42)
repeat_size = Vector2(480, 0)
repeat_times = 18

[node name="Sprite2D" type="Sprite2D" parent="Trees/Trees1"]
position = Vector2(2351, 59)
texture = ExtResource("7_vvdfm")

[node name="Background" type="TileMapLayer" parent="."]

[node name="Middle" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAUAAAABAAAAAAACAAUAAAABAAAAAAADAAUAAAABAAAAAAAEAAUAAAABAAAAAAAFAAUAAAABAAAAAAAGAAUAAAABAAAAAAAHAAUAAAABAAAAAAAIAAUAAAABAAAAAAAAAAUAAAAEAAIAAAAAAAEAAAAEAAAAAAABAAEAAAAFAAAAAAACAAEAAAAFAAAAAAADAAEAAAAFAAAAAAAEAAEAAAAFAAAAAAAJAAUAAAABAAAAAAAKAAUAAAABAAAAAAALAAUAAAABAAAAAAAMAAUAAAABAAAAAAANAAUAAAABAAAAAAAOAAUAAAABAAAAAAAPAAUAAAABAAAAAAAQAAUAAAAGAAIAAAARAAUAAAABAAEAAAASAAUAAAAEAAIAAAATAAUAAAABAAAAAAAUAAUAAAABAAAAAAAVAAUAAAABAAAAAAAWAAUAAAABAAAAAAAXAAUAAAABAAAAAAAYAAUAAAABAAAAAAAZAAUAAAABAAAAAAAaAAUAAAABAAAAAAAbAAUAAAABAAAAAAAcAAUAAAABAAAAAAAdAAUAAAABAAAAAAAeAAUAAAABAAAAAAAfAAUAAAABAAAAAAAgAAUAAAABAAAAAAAhAAUAAAABAAAAAAAiAAUAAAABAAAAAAAjAAUAAAABAAAAAAAkAAUAAAABAAAAAAAAAAIAAAAEAAEAAAAAAAQAAAAEAAEAAAAAAAMAAAAEAAEAAAArAAEAAAAAAAEAAAAsAAEAAAAEAAAAAAAtAAEAAAAFAAAAAAAuAAEAAAAFAAAAAAAvAAEAAAAFAAAAAAAwAAEAAAAFAAAAAAAxAAEAAAAFAAAAAAAyAAEAAAAFAAAAAAAzAAEAAAAFAAAAAAAlAAUAAAABAAAAAAAmAAUAAAABAAAAAAAnAAUAAAABAAAAAAAoAAUAAAAGAAIAAAApAAUAAAAFAAEAAAAqAAUAAAAFAAEAAAArAAUAAAAFAAEAAAAsAAUAAAAEAAIAAAAtAAUAAAABAAAAAAAuAAUAAAABAAAAAAAvAAUAAAABAAAAAAAwAAUAAAABAAAAAAAxAAUAAAABAAAAAAAyAAUAAAABAAAAAAAzAAUAAAABAAAAAAA0AAIAAAAAAAEAAAA0AAMAAAAAAAEAAAA0AAQAAAAAAAEAAAA0AAUAAAAGAAIAAAA0AAEAAAAGAAAAAAAAAPT/AAABAAEAAAAAAPX/AAABAAEAAAAAAPb/AAABAAEAAAAAAPf/AAABAAEAAAAAAPj/AAABAAEAAAAAAPn/AAABAAEAAAAAAPr/AAABAAEAAAAAAPv/AAABAAEAAAAAAPz/AAABAAEAAAAAAP3/AAABAAEAAAAAAP7/AAABAAEAAAAAAP//AAABAAEAAAAAAAAAAAABAAEAAAABAPT/AAABAAEAAAABAPX/AAABAAEAAAABAPb/AAABAAEAAAABAPf/AAABAAEAAAABAPj/AAABAAEAAAABAPn/AAABAAEAAAABAPr/AAABAAEAAAABAPv/AAABAAEAAAABAPz/AAABAAEAAAABAP3/AAABAAEAAAABAP7/AAABAAEAAAABAP//AAABAAEAAAABAAAAAAABAAEAAAACAPT/AAABAAEAAAACAPX/AAABAAEAAAACAPb/AAABAAEAAAACAPf/AAABAAEAAAACAPj/AAABAAEAAAACAPn/AAABAAEAAAACAPr/AAABAAEAAAACAPv/AAABAAEAAAACAPz/AAABAAEAAAACAP3/AAABAAEAAAACAP7/AAABAAEAAAACAP//AAABAAEAAAACAAAAAAABAAEAAAADAPT/AAABAAEAAAADAPX/AAABAAEAAAADAPb/AAABAAEAAAADAPf/AAABAAEAAAADAPj/AAABAAEAAAADAPn/AAABAAEAAAADAPr/AAABAAEAAAADAPv/AAABAAEAAAADAPz/AAABAAEAAAADAP3/AAABAAEAAAADAP7/AAABAAEAAAADAP//AAABAAEAAAADAAAAAAABAAEAAAAEAPT/AAABAAEAAAAEAPX/AAABAAEAAAAEAPb/AAABAAEAAAAEAPf/AAABAAEAAAAEAPj/AAABAAEAAAAEAPn/AAABAAEAAAAEAPr/AAABAAEAAAAEAPv/AAABAAEAAAAEAPz/AAABAAEAAAAEAP3/AAABAAEAAAAEAP7/AAABAAEAAAAEAP//AAABAAEAAAAEAAAAAAABAAEAAAAFAPT/AAABAAEAAAAFAPX/AAABAAEAAAAFAPb/AAABAAEAAAAFAPf/AAABAAEAAAAFAPj/AAAEAAAAAAAFAPn/AAACAAEAAAAFAPr/AAACAAEAAAAFAPv/AAACAAEAAAAFAPz/AAACAAEAAAAFAP3/AAACAAEAAAAFAP7/AAACAAEAAAAFAP//AAACAAEAAAAGAPT/AAABAAEAAAAGAPX/AAABAAEAAAAGAPb/AAABAAEAAAAGAPf/AAABAAEAAAAGAPj/AAAFAAAAAAAHAPT/AAABAAEAAAAHAPX/AAABAAEAAAAHAPb/AAABAAEAAAAHAPf/AAABAAEAAAAHAPj/AAAFAAAAAAAIAPT/AAABAAEAAAAIAPX/AAABAAEAAAAIAPb/AAABAAEAAAAIAPf/AAABAAEAAAAIAPj/AAAFAAAAAAAJAPT/AAABAAEAAAAJAPX/AAABAAEAAAAJAPb/AAABAAEAAAAJAPf/AAABAAEAAAAJAPj/AAAFAAAAAAAKAPT/AAABAAEAAAAKAPX/AAABAAEAAAAKAPb/AAABAAEAAAAKAPf/AAABAAEAAAAKAPj/AAAFAAAAAAALAPT/AAABAAEAAAALAPX/AAABAAEAAAALAPb/AAABAAEAAAALAPf/AAABAAEAAAALAPj/AAAFAAAAAAAAAPH/AAABAAEAAAAAAPL/AAABAAEAAAAAAPP/AAABAAEAAAABAPH/AAABAAEAAAABAPL/AAABAAEAAAABAPP/AAABAAEAAAACAPH/AAABAAEAAAACAPL/AAABAAEAAAACAPP/AAABAAEAAAADAPH/AAABAAEAAAADAPL/AAABAAEAAAADAPP/AAABAAEAAAAEAPH/AAABAAEAAAAEAPL/AAABAAEAAAAEAPP/AAABAAEAAAAFAPH/AAABAAEAAAAFAPL/AAABAAEAAAAFAPP/AAABAAEAAAAGAPH/AAABAAEAAAAGAPL/AAABAAEAAAAGAPP/AAABAAEAAAAHAPH/AAABAAEAAAAHAPL/AAABAAEAAAAHAPP/AAABAAEAAAAIAPH/AAABAAEAAAAIAPL/AAABAAEAAAAIAPP/AAABAAEAAAAJAPH/AAABAAEAAAAJAPL/AAABAAEAAAAJAPP/AAABAAEAAAAKAPH/AAABAAEAAAAKAPL/AAABAAEAAAAKAPP/AAABAAEAAAALAPH/AAABAAEAAAALAPL/AAABAAEAAAALAPP/AAABAAEAAAArAPH/AAAAAAEAAAArAPL/AAAAAAEAAAArAPP/AAAAAAEAAAArAPT/AAAAAAEAAAArAPX/AAAAAAEAAAArAPb/AAAAAAEAAAArAPf/AAAAAAEAAAArAPj/AAAAAAEAAAArAPn/AAAAAAEAAAArAPr/AAAAAAEAAAArAPv/AAAAAAEAAAArAPz/AAAAAAEAAAArAP3/AAAAAAEAAAArAP7/AAAAAAEAAAArAP//AAAAAAEAAAArAAAAAAAAAAEAAAAsAPH/AAABAAEAAAAsAPL/AAABAAEAAAAsAPP/AAABAAEAAAAsAPT/AAABAAEAAAAsAPX/AAABAAEAAAAsAPb/AAABAAEAAAAsAPf/AAABAAEAAAAsAPj/AAABAAEAAAAsAPn/AAABAAEAAAAsAPr/AAABAAEAAAAsAPv/AAABAAEAAAAsAPz/AAABAAEAAAAsAP3/AAABAAEAAAAsAP7/AAABAAEAAAAsAP//AAABAAEAAAAsAAAAAAABAAEAAAAtAPH/AAABAAEAAAAtAPL/AAABAAEAAAAtAPP/AAABAAEAAAAtAPT/AAABAAEAAAAtAPX/AAABAAEAAAAtAPb/AAABAAEAAAAtAPf/AAABAAEAAAAtAPj/AAABAAEAAAAtAPn/AAABAAEAAAAtAPr/AAABAAEAAAAtAPv/AAABAAEAAAAtAPz/AAABAAEAAAAtAP3/AAABAAEAAAAtAP7/AAABAAEAAAAtAP//AAABAAEAAAAtAAAAAAABAAEAAAAuAPH/AAABAAEAAAAuAPL/AAABAAEAAAAuAPP/AAABAAEAAAAuAPT/AAABAAEAAAAuAPX/AAABAAEAAAAuAPb/AAABAAEAAAAuAPf/AAABAAEAAAAuAPj/AAABAAEAAAAuAPn/AAABAAEAAAAuAPr/AAABAAEAAAAuAPv/AAABAAEAAAAuAPz/AAABAAEAAAAuAP3/AAABAAEAAAAuAP7/AAABAAEAAAAuAP//AAABAAEAAAAuAAAAAAABAAEAAAAvAPH/AAABAAEAAAAvAPL/AAABAAEAAAAvAPP/AAABAAEAAAAvAPT/AAABAAEAAAAvAPX/AAABAAEAAAAvAPb/AAABAAEAAAAvAPf/AAABAAEAAAAvAPj/AAABAAEAAAAvAPn/AAABAAEAAAAvAPr/AAABAAEAAAAvAPv/AAABAAEAAAAvAPz/AAABAAEAAAAvAP3/AAABAAEAAAAvAP7/AAABAAEAAAAvAP//AAABAAEAAAAvAAAAAAABAAEAAAAwAPH/AAABAAEAAAAwAPL/AAABAAEAAAAwAPP/AAABAAEAAAAwAPT/AAABAAEAAAAwAPX/AAABAAEAAAAwAPb/AAABAAEAAAAwAPf/AAABAAEAAAAwAPj/AAABAAEAAAAwAPn/AAABAAEAAAAwAPr/AAABAAEAAAAwAPv/AAABAAEAAAAwAPz/AAABAAEAAAAwAP3/AAABAAEAAAAwAP7/AAABAAEAAAAwAP//AAABAAEAAAAwAAAAAAABAAEAAAAxAPH/AAABAAEAAAAxAPL/AAABAAEAAAAxAPP/AAABAAEAAAAxAPT/AAABAAEAAAAxAPX/AAABAAEAAAAxAPb/AAABAAEAAAAxAPf/AAABAAEAAAAxAPj/AAABAAEAAAAxAPn/AAABAAEAAAAxAPr/AAABAAEAAAAxAPv/AAABAAEAAAAxAPz/AAABAAEAAAAxAP3/AAABAAEAAAAxAP7/AAABAAEAAAAxAP//AAABAAEAAAAxAAAAAAABAAEAAAAyAPH/AAABAAEAAAAyAPL/AAABAAEAAAAyAPP/AAABAAEAAAAyAPT/AAABAAEAAAAyAPX/AAABAAEAAAAyAPb/AAABAAEAAAAyAPf/AAABAAEAAAAyAPj/AAABAAEAAAAyAPn/AAABAAEAAAAyAPr/AAABAAEAAAAyAPv/AAABAAEAAAAyAPz/AAABAAEAAAAyAP3/AAABAAEAAAAyAP7/AAABAAEAAAAyAP//AAABAAEAAAAyAAAAAAABAAEAAAAzAPH/AAABAAEAAAAzAPL/AAABAAEAAAAzAPP/AAABAAEAAAAzAPT/AAABAAEAAAAzAPX/AAABAAEAAAAzAPb/AAABAAEAAAAzAPf/AAABAAEAAAAzAPj/AAABAAEAAAAzAPn/AAABAAEAAAAzAPr/AAABAAEAAAAzAPv/AAABAAEAAAAzAPz/AAABAAEAAAAzAP3/AAABAAEAAAAzAP7/AAABAAEAAAAzAP//AAABAAEAAAAzAAAAAAABAAEAAAA0APH/AAABAAEAAAA0APL/AAABAAEAAAA0APP/AAABAAEAAAA0APT/AAABAAEAAAA0APX/AAABAAEAAAA0APb/AAABAAEAAAA0APf/AAABAAEAAAA0APj/AAABAAEAAAA0APn/AAABAAEAAAA0APr/AAABAAEAAAA0APv/AAABAAEAAAA0APz/AAABAAEAAAA0AP3/AAABAAEAAAA0AP7/AAABAAEAAAA0AP//AAABAAEAAAA0AAAAAAABAAEAAAAfAAYAAAABAAEAAAAfAAcAAAABAAEAAAAfAAgAAAABAAEAAAAfAAkAAAABAAEAAAAfAAoAAAABAAEAAAAfAAsAAAABAAEAAAAgAAYAAAABAAEAAAAgAAcAAAABAAEAAAAgAAgAAAABAAEAAAAgAAkAAAABAAEAAAAgAAoAAAABAAEAAAAgAAsAAAABAAEAAAAhAAYAAAABAAEAAAAhAAcAAAABAAEAAAAhAAgAAAABAAEAAAAhAAkAAAABAAEAAAAhAAoAAAABAAEAAAAhAAsAAAABAAEAAAAiAAYAAAABAAEAAAAiAAcAAAABAAEAAAAiAAgAAAABAAEAAAAiAAkAAAABAAEAAAAiAAoAAAABAAEAAAAiAAsAAAABAAEAAAAjAAYAAAABAAEAAAAjAAcAAAABAAEAAAAjAAgAAAABAAEAAAAjAAkAAAABAAEAAAAjAAoAAAABAAEAAAAjAAsAAAABAAEAAAAkAAYAAAABAAEAAAAkAAcAAAABAAEAAAAkAAgAAAABAAEAAAAkAAkAAAABAAEAAAAkAAoAAAABAAEAAAAkAAsAAAABAAEAAAAlAAYAAAABAAEAAAAlAAcAAAABAAEAAAAlAAgAAAABAAEAAAAlAAkAAAABAAEAAAAlAAoAAAABAAEAAAAlAAsAAAABAAEAAAAmAAYAAAABAAEAAAAmAAcAAAABAAEAAAAmAAgAAAABAAEAAAAmAAkAAAABAAEAAAAmAAoAAAABAAEAAAAmAAsAAAABAAEAAAAnAAYAAAABAAEAAAAnAAcAAAABAAEAAAAnAAgAAAABAAEAAAAnAAkAAAABAAEAAAAnAAoAAAABAAEAAAAnAAsAAAABAAEAAAAoAAYAAAABAAEAAAAoAAcAAAABAAEAAAAoAAgAAAABAAEAAAAoAAkAAAABAAEAAAAoAAoAAAABAAEAAAAoAAsAAAABAAEAAAApAAYAAAABAAEAAAApAAcAAAABAAEAAAApAAgAAAABAAEAAAApAAkAAAABAAEAAAApAAoAAAABAAEAAAApAAsAAAABAAEAAAAqAAYAAAABAAEAAAAqAAcAAAABAAEAAAAqAAgAAAABAAEAAAAqAAkAAAABAAEAAAAqAAoAAAABAAEAAAAqAAsAAAABAAEAAAArAAYAAAABAAEAAAArAAcAAAABAAEAAAArAAgAAAABAAEAAAArAAkAAAABAAEAAAArAAoAAAABAAEAAAArAAsAAAABAAEAAAAsAAYAAAABAAEAAAAsAAcAAAABAAEAAAAsAAgAAAABAAEAAAAsAAkAAAABAAEAAAAsAAoAAAABAAEAAAAsAAsAAAABAAEAAAAtAAYAAAABAAEAAAAtAAcAAAABAAEAAAAtAAgAAAABAAEAAAAtAAkAAAABAAEAAAAtAAoAAAABAAEAAAAtAAsAAAABAAEAAAAuAAYAAAABAAEAAAAuAAcAAAABAAEAAAAuAAgAAAABAAEAAAAuAAkAAAABAAEAAAAuAAoAAAABAAEAAAAuAAsAAAABAAEAAAAvAAYAAAABAAEAAAAvAAcAAAABAAEAAAAvAAgAAAABAAEAAAAvAAkAAAABAAEAAAAvAAoAAAABAAEAAAAvAAsAAAABAAEAAAAwAAYAAAABAAEAAAAwAAcAAAABAAEAAAAwAAgAAAABAAEAAAAwAAkAAAABAAEAAAAwAAoAAAABAAEAAAAwAAsAAAABAAEAAAAxAAYAAAABAAEAAAAxAAcAAAABAAEAAAAxAAgAAAABAAEAAAAxAAkAAAABAAEAAAAxAAoAAAABAAEAAAAxAAsAAAABAAEAAAAyAAYAAAABAAEAAAAyAAcAAAABAAEAAAAyAAgAAAABAAEAAAAyAAkAAAABAAEAAAAyAAoAAAABAAEAAAAyAAsAAAABAAEAAAAzAAYAAAABAAEAAAAzAAcAAAABAAEAAAAzAAgAAAABAAEAAAAzAAkAAAABAAEAAAAzAAoAAAABAAEAAAAzAAsAAAABAAEAAAA0AAYAAAABAAEAAAA0AAcAAAABAAEAAAA0AAgAAAABAAEAAAA0AAkAAAABAAEAAAA0AAoAAAABAAEAAAA0AAsAAAABAAEAAAAAAAYAAAABAAEAAAAAAAcAAAABAAEAAAAAAAgAAAABAAEAAAAAAAkAAAABAAEAAAAAAAoAAAABAAEAAAAAAAsAAAABAAEAAAABAAYAAAABAAEAAAABAAcAAAABAAEAAAABAAgAAAABAAEAAAABAAkAAAABAAEAAAABAAoAAAABAAEAAAABAAsAAAABAAEAAAACAAYAAAABAAEAAAACAAcAAAABAAEAAAACAAgAAAABAAEAAAACAAkAAAABAAEAAAACAAoAAAABAAEAAAACAAsAAAABAAEAAAADAAYAAAABAAEAAAADAAcAAAABAAEAAAADAAgAAAABAAEAAAADAAkAAAABAAEAAAADAAoAAAABAAEAAAADAAsAAAABAAEAAAAEAAYAAAABAAEAAAAEAAcAAAABAAEAAAAEAAgAAAABAAEAAAAEAAkAAAABAAEAAAAEAAoAAAABAAEAAAAEAAsAAAABAAEAAAAFAAYAAAABAAEAAAAFAAcAAAABAAEAAAAFAAgAAAABAAEAAAAFAAkAAAABAAEAAAAFAAoAAAABAAEAAAAFAAsAAAABAAEAAAAGAAYAAAABAAEAAAAGAAcAAAABAAEAAAAGAAgAAAABAAEAAAAGAAkAAAABAAEAAAAGAAoAAAABAAEAAAAGAAsAAAABAAEAAAAHAAYAAAABAAEAAAAHAAcAAAABAAEAAAAHAAgAAAABAAEAAAAHAAkAAAABAAEAAAAHAAoAAAABAAEAAAAHAAsAAAABAAEAAAAIAAYAAAABAAEAAAAIAAcAAAABAAEAAAAIAAgAAAABAAEAAAAIAAkAAAABAAEAAAAIAAoAAAABAAEAAAAIAAsAAAABAAEAAAAJAAYAAAABAAEAAAAJAAcAAAABAAEAAAAJAAgAAAABAAEAAAAJAAkAAAABAAEAAAAJAAoAAAABAAEAAAAJAAsAAAABAAEAAAAKAAYAAAABAAEAAAAKAAcAAAABAAEAAAAKAAgAAAABAAEAAAAKAAkAAAABAAEAAAAKAAoAAAABAAEAAAAKAAsAAAABAAEAAAALAAYAAAABAAEAAAALAAcAAAABAAEAAAALAAgAAAABAAEAAAALAAkAAAABAAEAAAALAAoAAAABAAEAAAALAAsAAAABAAEAAAAMAAYAAAABAAEAAAAMAAcAAAABAAEAAAAMAAgAAAABAAEAAAAMAAkAAAABAAEAAAAMAAoAAAABAAEAAAAMAAsAAAABAAEAAAANAAYAAAABAAEAAAANAAcAAAABAAEAAAANAAgAAAABAAEAAAANAAkAAAABAAEAAAANAAoAAAABAAEAAAANAAsAAAABAAEAAAAOAAYAAAABAAEAAAAOAAcAAAABAAEAAAAOAAgAAAABAAEAAAAOAAkAAAABAAEAAAAOAAoAAAABAAEAAAAOAAsAAAABAAEAAAAPAAYAAAABAAEAAAAPAAcAAAABAAEAAAAPAAgAAAABAAEAAAAPAAkAAAABAAEAAAAPAAoAAAABAAEAAAAPAAsAAAABAAEAAAAQAAYAAAABAAEAAAAQAAcAAAABAAEAAAAQAAgAAAABAAEAAAAQAAkAAAABAAEAAAAQAAoAAAABAAEAAAAQAAsAAAABAAEAAAARAAYAAAABAAEAAAARAAcAAAABAAEAAAARAAgAAAABAAEAAAARAAkAAAABAAEAAAARAAoAAAABAAEAAAARAAsAAAABAAEAAAASAAYAAAABAAEAAAASAAcAAAABAAEAAAASAAgAAAABAAEAAAASAAkAAAABAAEAAAASAAoAAAABAAEAAAASAAsAAAABAAEAAAATAAYAAAABAAEAAAATAAcAAAABAAEAAAATAAgAAAABAAEAAAATAAkAAAABAAEAAAATAAoAAAABAAEAAAATAAsAAAABAAEAAAAUAAYAAAABAAEAAAAUAAcAAAABAAEAAAAUAAgAAAABAAEAAAAUAAkAAAABAAEAAAAUAAoAAAABAAEAAAAUAAsAAAABAAEAAAAVAAYAAAABAAEAAAAVAAcAAAABAAEAAAAVAAgAAAABAAEAAAAVAAkAAAABAAEAAAAVAAoAAAABAAEAAAAVAAsAAAABAAEAAAAWAAYAAAABAAEAAAAWAAcAAAABAAEAAAAWAAgAAAABAAEAAAAWAAkAAAABAAEAAAAWAAoAAAABAAEAAAAWAAsAAAABAAEAAAAXAAYAAAABAAEAAAAXAAcAAAABAAEAAAAXAAgAAAABAAEAAAAXAAkAAAABAAEAAAAXAAoAAAABAAEAAAAXAAsAAAABAAEAAAAYAAYAAAABAAEAAAAYAAcAAAABAAEAAAAYAAgAAAABAAEAAAAYAAkAAAABAAEAAAAYAAoAAAABAAEAAAAYAAsAAAABAAEAAAAZAAYAAAABAAEAAAAZAAcAAAABAAEAAAAZAAgAAAABAAEAAAAZAAkAAAABAAEAAAAZAAoAAAABAAEAAAAZAAsAAAABAAEAAAAaAAYAAAABAAEAAAAaAAcAAAABAAEAAAAaAAgAAAABAAEAAAAaAAkAAAABAAEAAAAaAAoAAAABAAEAAAAaAAsAAAABAAEAAAAbAAYAAAABAAEAAAAbAAcAAAABAAEAAAAbAAgAAAABAAEAAAAbAAkAAAABAAEAAAAbAAoAAAABAAEAAAAbAAsAAAABAAEAAAAcAAYAAAABAAEAAAAcAAcAAAABAAEAAAAcAAgAAAABAAEAAAAcAAkAAAABAAEAAAAcAAoAAAABAAEAAAAcAAsAAAABAAEAAAAdAAYAAAABAAEAAAAdAAcAAAABAAEAAAAdAAgAAAABAAEAAAAdAAkAAAABAAEAAAAdAAoAAAABAAEAAAAdAAsAAAABAAEAAAAeAAYAAAABAAEAAAAeAAcAAAABAAEAAAAeAAgAAAABAAEAAAAeAAkAAAABAAEAAAAeAAoAAAABAAEAAAAeAAsAAAABAAEAAAAMAPH/AAACAAEAAAAMAPL/AAACAAEAAAAMAPP/AAACAAEAAAAMAPT/AAACAAEAAAAMAPX/AAACAAEAAAAMAPb/AAACAAEAAAAMAPf/AAACAAEAAAAMAPj/AAACAAIAAAArAAIAAAAAAAEAAAArAAMAAAAAAAEAAAArAAQAAAAGAAIAAAAsAAIAAAACAAEAAAAsAAMAAAACAAEAAAAsAAQAAAACAAEAAAAFAAEAAAACAAIAAAAFAAAAAAACAAEAAAAoAAQAAAAAAAAAAAApAAQAAAABAAAAAAAqAAQAAAABAAAAAAAQAAQAAAAAAAAAAAARAAQAAAABAAAAAAASAAQAAAACAAAAAAA=")
tile_set = SubResource("TileSet_hnipg")

[node name="CameraTrigger" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraTrigger"]
position = Vector2(101, 159)
shape = SubResource("CircleShape2D_7o30c")

[node name="CameraTrigger2" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraTrigger2"]
position = Vector2(2445, 159)
shape = SubResource("CircleShape2D_7o30c")

[node name="TransitionZone" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2
script = ExtResource("2_n635d")
next_section_path = "res://scenes/map/area_tutorial/sections/Section3.tscn"
player_spawn_position = Vector2(3000, 1248)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionZone"]
position = Vector2(76, 166)
shape = SubResource("RectangleShape2D_blrji")
debug_color = Color(0.6339733, 0.72985774, 0.07010373, 0.41960785)

[node name="TransitionZone2" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2
script = ExtResource("2_n635d")
next_section_path = "res://scenes/map/area_tutorial/sections/Section3.tscn"
player_spawn_position = Vector2(120, 220)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionZone2"]
position = Vector2(2483, 165)
shape = SubResource("RectangleShape2D_blrji")
debug_color = Color(0.6339733, 0.72985774, 0.07010373, 0.41960785)

[node name="Enemies" type="Node2D" parent="."]

[node name="EnemyThree" parent="Enemies" instance=ExtResource("4_r503u")]
position = Vector2(1805, 185)

[node name="HeartItem" parent="Enemies" instance=ExtResource("11_m2qk4")]
position = Vector2(2171, 232)

[node name="HeartItem4" parent="Enemies" instance=ExtResource("11_m2qk4")]
position = Vector2(2056, 182)

[node name="HeartItem5" parent="Enemies" instance=ExtResource("11_m2qk4")]
position = Vector2(922, 231)

[node name="HeartItem2" parent="Enemies" instance=ExtResource("11_m2qk4")]
position = Vector2(2188, 232)

[node name="HeartItem3" parent="Enemies" instance=ExtResource("11_m2qk4")]
position = Vector2(2205, 232)

[node name="TriggerDialogue" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerDialogue"]
position = Vector2(1466, 87)
shape = SubResource("RectangleShape2D_mhf66")

[node name="WallLimited" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLimited"]
position = Vector2(799, 17)
shape = SubResource("RectangleShape2D_m2qk4")

[connection signal="area_entered" from="CameraTrigger" to="." method="_on_camera_trigger_area_entered"]
[connection signal="area_entered" from="CameraTrigger2" to="." method="_on_camera_trigger_2_area_entered"]
[connection signal="area_entered" from="TransitionZone" to="TransitionZone" method="_on_area_entered"]
[connection signal="area_entered" from="TransitionZone2" to="TransitionZone2" method="_on_area_entered"]
[connection signal="body_entered" from="TriggerDialogue" to="." method="_on_trigger_dialogue_body_entered"]
